Fix 480px: align print button width with calculator table

--- a/src/pages/posPage.css
+++ b/src/pages/posPage.css
@@ -209,7 +209,7 @@
 
   .navbar-brand.adjusted {
     margin-left: 0 !important;
-    padding-left: 1.7rem !important;
+    padding-left: 2.3rem !important;
   }
 
   .pos-item {
@@ -235,7 +235,7 @@
 
   .container-calculator {
     margin-top: 1rem !important;
-    margin-left: 1rem !important;
+    margin-left: 0.5rem !important;
     margin-right: 1.5rem !important;
   }
 
@@ -249,8 +249,8 @@
   }
 
   .total-amount {
-    padding-left: 1.1rem !important;
-    font-size: 1rem !important;
+    padding-left: 0 !important;
+    font-size: 0.9rem !important;
   }
 
   .btn-danger {
@@ -260,8 +260,12 @@
   }
 
   .print-container {
-    padding: 1rem !important;
-    margin-left: 0rem !important;
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
+    padding-top: 1rem !important;
+    padding-bottom: 1rem !important;
+    margin-left: 0.5rem !important;
+    margin-right: 1.5rem !important;
   }
 
   .btn-print {
@@ -333,7 +337,6 @@ tr {
   border: none !important;
   background-color: #000000;
   color: white;
-  /* box-shadow: 3px 7px 7px rgba(100, 100, 100, 0.1); */
   transition: ease 0.3s;
   -webkit-transition: ease 0.3s;
   -moz-transition: ease 0.3s;
@@ -402,7 +405,6 @@ h5 {
 }
 
 .cart-title {
-  /*font-family: "Helvetica", sans-serif;*/
   font-weight: 500;
   text-transform: uppercase;
   margin-left: 0.5rem;
